# open-ai-reviews-rate

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: my-check.yml
chat_gpt_reviews_rates/: __init__.py  openai_reviews_rate_script.py
tests/: conftest.py  test_openai_reviews_rate_script.py
tests/test_data/: reviews.csv
